--- a/nodes/pom.xml
+++ b/nodes/pom.xml
@@ -5,4 +5,69 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>nodes</name>
   <description>A graph library.</description>
+  
+  <build>
+	  <resources>
+		<resource>
+	      <directory>src/main/resources</directory>
+	    </resource>
+	  </resources>
+	  <pluginManagement>
+	    <plugins>
+	      <plugin>
+	        <artifactId>maven-compiler-plugin</artifactId>
+	        <version>2.3.2</version>
+	        <configuration>
+	    		<source>1.6</source>
+	    		<target>1.6</target>
+	    		<encoding>UTF-8</encoding>
+	 		</configuration>
+	        <executions>
+	          <execution>
+	            <id>default-testCompile</id>
+	            <phase>test-compile</phase>
+	            <goals>
+	              <goal>testCompile</goal>
+	            </goals>
+	          </execution>
+	          <execution>
+	            <id>default-compile</id>
+	            <phase>compile</phase>
+	            <goals>
+	              <goal>compile</goal>
+	            </goals>
+	          </execution>
+	        </executions>
+	      </plugin>
+	      
+	    </plugins>
+	  </pluginManagement>
+  </build>  
+  <dependencies>
+  	<dependency>
+  		<groupId>org.apache.commons</groupId>
+  		<artifactId>commons-math3</artifactId>
+  		<version>3.0</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>batik</groupId>
+  		<artifactId>batik</artifactId>
+  		<version>1.5</version>
+  	</dependency>
+     <dependency>
+     	<groupId>batik</groupId>
+     	<artifactId>batik-dom</artifactId>
+     	<version>1.6-1</version>
+     </dependency>
+     <dependency>
+     	<groupId>batik</groupId>
+     	<artifactId>batik-svggen</artifactId>
+     	<version>1.6-1</version>
+     </dependency>
+     <dependency>
+     	<groupId>batik</groupId>
+     	<artifactId>batik-transcoder</artifactId>
+     	<version>1.6-1</version>
+     </dependency>  	
+  </dependencies>
 </project>
