--- a/nodes/pom.xml
+++ b/nodes/pom.xml
@@ -68,6 +68,16 @@
      	<groupId>batik</groupId>
      	<artifactId>batik-transcoder</artifactId>
      	<version>1.6-1</version>
-     </dependency>  	
+     </dependency>
+     <dependency>
+     	<groupId>net.sf.opencsv</groupId>
+     	<artifactId>opencsv</artifactId>
+     	<version>2.3</version>
+     </dependency>
+     <dependency>
+     	<groupId>junit</groupId>
+     	<artifactId>junit</artifactId>
+     	<version>4.10</version>
+     </dependency>
   </dependencies>
 </project>
