--- a/nodes/pom.xml
+++ b/nodes/pom.xml
@@ -44,6 +44,21 @@
 	  </pluginManagement>
   </build>  
   <dependencies>
+    <dependency>
+    	<groupId>org.openrdf.sesame</groupId>
+    	<artifactId>sesame-runtime</artifactId>
+     	<version>2.7.1</version>
+    </dependency>
+    <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-turtle</artifactId>
+            <version>2.7.1</version>
+    </dependency>
+     <dependency>
+            <groupId>org.openrdf.sesame</groupId>
+            <artifactId>sesame-rio-n3</artifactId>
+            <version>2.7.1</version>
+    </dependency>
   	<dependency>
   		<groupId>org.apache.commons</groupId>
   		<artifactId>commons-math3</artifactId>
