--- a/nodes/pom.xml
+++ b/nodes/pom.xml
@@ -69,6 +69,11 @@
   		<artifactId>batik</artifactId>
   		<version>1.5</version>
   	</dependency>
+  	<dependency>
+    <groupId>com.joptimizer</groupId>
+		<artifactId>joptimizer</artifactId>
+		<version>3.4.0</version>
+	</dependency>
      <dependency>
      	<groupId>batik</groupId>
      	<artifactId>batik-dom</artifactId>
