--- a/nodes/pom.xml
+++ b/nodes/pom.xml
@@ -109,16 +109,16 @@
      	<artifactId>junit</artifactId>
      	<version>4.10</version>
      </dependency>
-    <dependency>
-     	<groupId>com.github.pbloem</groupId>
-     	<artifactId>kit</artifactId>
-     	<version>v0.1.12</version>
-    </dependency>   
 <!--     <dependency> -->
-<!--   	  <groupId>peterbloem.nl</groupId> -->
-<!--   	  <artifactId>kit</artifactId> -->
-<!--   	  <version>0.0.1-SNAPSHOT</version> -->
-<!--     </dependency>  -->
+<!--      	<groupId>com.github.pbloem</groupId> -->
+<!--      	<artifactId>kit</artifactId> -->
+<!--      	<version>v0.1.12</version> -->
+<!--     </dependency>    -->
+    <dependency>
+  	  <groupId>peterbloem.nl</groupId>
+  	  <artifactId>kit</artifactId>
+  	  <version>0.0.1-SNAPSHOT</version>
+    </dependency> 
   <dependency>
   	<groupId>org.mapdb</groupId>
   	<artifactId>mapdb</artifactId>
